--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -1,8 +1,5 @@
-%\documentstyle[sty/eclepsf, epsbox, ascmac, 12pt, sty/wakizono]{cls/harureport}
-%\documentclass[12pt,a4j]{article}
 %\documentclass[12pt,a4j]{cls/report}
 \documentclass[12pt,a4j]{report}
-
 \usepackage[dvipdfm,bookmarks=true,bookmarksnumbered=true,bookmarkstype=toc]{hyperref}
 %\documentstyle[sty/eclepsf, sty/epsbox, ascmac, 12pt, sty/wakizono]{cls/harureport}
 %\documentclass[12pt,a4j]{article}
@@ -11,12 +8,12 @@
 %\usepackage[sty/ascmac]{cls/report}
 %\usepackage[dvips]{graphicx}
 \usepackage[dvips]{graphicx,color}
- \graphicspath{{/home/mdbl/picture/}}
+ \graphicspath{{/home/mdbl/thesis/}}
 \usepackage{verbatim}
 %\usepackage{fancybx}
 \usepackage{footnote}
 %\usepackage{jtygm}
-%\usepackage{multirow}
+\usepackage{multirow}
 %\usepackage{ascmac}
 \usepackage{listings}
 \usepackage{cite}
@@ -25,10 +22,11 @@
 \usepackage[american]{babel}
 \usepackage[tight]{subfigure}
 
-%\usepackage{amsmath}
+\usepackage{amsmath}
 
 \usepackage{epstopdf}
 \usepackage{epsfig}
+\usepackage{url}
 %\usepackage{fontspec} 
 %\setmainfont{URW Palladio L}
 %\newfontfamily\jap[Scale=0.8]{Kochi Mincho}  % here we simply define a new font switch
@@ -37,6 +35,7 @@
 \epstopdfsetup{suffix=-\SourceExt-converted-to}
 \usepackage{algpseudocode}
 \usepackage{algorithmicx}
+
 
 \definecolor{javared}{rgb}{0.6,0,0} % for strings
 \definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
@@ -75,9 +74,10 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %\vspace{30mm}
 \vspace{30mm}
 
-{\Large\bf A Regional Food's Features Extraction Algorithm}\\ 
+{\Large\bf A TF-IDF Based Algorithm for  }\\ 
 %HUSTLE: Deploying A Secure Wireless Sensor Network 
 %by Light Communication with Smartphone\vspace{5mm}
+{\Large\bf Regional Food's Features Extraction }\\
 {\Large\bf and Its Application}\\
 \vspace{3mm}
 %\vspace{3mm}
@@ -99,7 +99,7 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 
 {\Large\it  Submitted in partial fulfillment of the requirements} \\
 \vspace{3mm}
-{\Large\it  for the degree of Bachelor}\\
+{\Large\it  for the degree of Bachelor of Art}\\
 
 %\vspace{2cm}
 \vspace{12mm}
