--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -4,7 +4,8 @@
 {\bf Abstract of Bachelor's Thesis} \\
 
 \vspace{5mm}
-{\bf A Regional Food's Features Extraction Algorithm\\ and Its Application}
+{\bf A TF-IDF Based Algorithm for \\Regional Food's Features Extraction\\ and Its Application}
+
 \end{Large}
 \end{center}
 
@@ -13,7 +14,7 @@
 \vspace{0.4cm}
 %Advantages
 Automatically detecting food's taste is a non-trivial part. However, we realize that the taste of food can be extracted by directly analyzing recipes by the ingredients and the amount of them in the recipes. 
-In this paper, we present a food analysis system to discover the taste of foods and to better understand the featured ingredients in each specific geographical region. The main features of this system are (1) to extract dominant ingredients and tastes in a region by analyzing the ingredients' frequency and its uniqueness, and (2) to transform user's existing materials or original recipe to a new recipe according to a targeted taste. To examine the feasibility and applicability of the algorithm, we have developed a web-based application with a recipe database collected from approximately 200 recipes in over 7 regions of Japan: Hokkaido-Tohoku, Kanto, Kansai, Shikoku, Tyubu, Kyusyu-Okinawa and Tyugoku. 
+In this paper, we present a food analysis system to discover the taste of foods and to better understand the featured ingredients in each specific geographical region. The main features of this system are (1) to extract dominant ingredients and tastes in a region by analyzing the ingredients' frequency and its uniqueness, and (2) to transform user's existing materials or original recipe to a new recipe according to a targeted taste. To examine the feasibility and applicability of the algorithm, we have developed a web-based application with a recipe database collected from approximately 200 recipes in over 8 regions of Japan: Hokkaido-Tohoku, Kanto, Kansai, Shikoku, Tyubu, Kyusyu-Okinawa and Tyugoku. 
 \vspace{-2.5mm}
 
 \begin{flushright}
