--- a/contents/implementation.tex
+++ b/contents/implementation.tex
@@ -1,4 +1,4 @@
-\chapter{Implementation}\label{chap:implementation}
+\chapter{Prototype System and Its Implementation}\label{chap:implementation}
 This section describes the recipe databse and experimental studies on this database by applying the featured ingredient analysis algorithm.  
 
 \subsection{The Recipe Database}
