--- a/contents/related.tex
+++ b/contents/related.tex
@@ -6,30 +6,24 @@ In this chapter, we introduce some related works to these functions and also the
 
 \clearpage
 
-\section{Recommending Recipe by 
-Ingredients}\label{sec:related_near}
+\section{Recommending Recipe by Ingredients}\label{sec:related_near}
 
 
 Recipe recommendation and retrieval has been the subject of
-cooking related research. One of the earlier works is Kalas, a social navigation system for food recipe, developed by Svensson et al.~\cite{Svensson:2005:DEK:1096737.1096739}. Ueda et al. proposed a personalized recipe recommendation method based on user’s food preferences [12,13]. A user’s food preference in terms of ingredients is derived from his/her recipe browsing activities and menu planning history. Xie et al.~\cite{5693849} proposed a hybrid semantic item model for recipe search by example. The hybrid semantic item model represents different kinds of features of recipe data. While most research models recipes in terms of ingredients, Wang et al. [15] model cooking procedures of Chinese recipes as directed graphs and proposed a substructure similarity measurement based on the frequent graph mining.
+cooking related research. One of the earlier works is Kalas, a social navigation system for food recipe, developed by Svensson et al.~\cite{Svensson:2005:DEK:1096737.1096739}. Xie et al.~\cite{5693849} proposed a hybrid semantic item model for recipe search by example. The hybrid semantic item model represents different kinds of features of recipe data. 
 
 
 Another branch of research has focused on the recipe
-recommendation for healthy food. Mino et al. investigated the recommendation of cooking recipes for a diet in which the evaluation value of intake or consumption of calorie is considered in the events of a user's schedule during the period of a diet [5]. Linear programming approach is utilized with the constraints of carbohydrate, lipid, protein, salt, and increasing the amount of vegetable intake. Karikome and Fujii propose a system to help
-users for planning nutritionally balanced menus [3].
-Considerations of recipes that correct the user’s nutritional imbalance are incorporated into
+recommendation for healthy food. Mino et al. investigated the recommendation of cooking recipes for a diet in which the evaluation value of intake or consumption of calorie is considered in the events of a user's schedule during the period of a diet~\cite{5358168}. Linear programming approach is utilized with the constraints of carbohydrate, lipid, protein, salt, and increasing the amount of vegetable intake. Karikome and Fujii propose a system to help users for planning nutritionally balanced menus~\cite{Karikome:2010:SSD:2108616.2108684}. Considerations of recipes that correct the user’s nutritional imbalance are incorporated into
 the recipe retrieval process.
 Visualization of dietary habits are also provided by this system.
 
-~\cite{Kuo:2012:IMP:2390776.2390778}
 
 \section{Replacing ingredients}
 
 Shidochi et al. proposed an approach to extract replaceable
-ingredients from recipes in to satisfy users' various demands, such as calorie constraints and food availability [9]. In order to develop a strategy for changing users eating and cooking behaviors, Pinxteren et al. pro
-posed a user-centered similarity measure for recommendation of healthier alternatives which are perceived to be similar to users commonly selected meals [7]. The similarity measure can be used to promote new recipes that fit
-users’ lifestyle. By considering the user’s cooking competence, Wagner et al. presented a context-aware recipe retrieval and recommendation system to motivate users for healthy food preparation [14]. The system tracks the user’s cooking activities with sensors in kitchen utensils and recommends healthy recipes that may increase the user’s cooking competence.
+ingredients from recipes in to satisfy users' various demands, such as calorie constraints and food availability ~\cite{Shidochi:2009:FRM:1630995.1630998}. 
 
-\section{TF-IDF algorithm}
+In order to develop a strategy for changing users eating and cooking behaviors, Pinxteren et al. proposed a user-centered similarity measure for recommendation of healthier alternatives which are perceived to be similar to users commonly selected meals~\cite{vanPinxteren:2011:DRS:1943403.1943422}. The similarity measure can be used to promote new recipes that fit users’ lifestyle. 
 
-\section{Summary}
+By considering the user’s cooking competence, Wagner et al. presented a context-aware recipe retrieval and recommendation system to motivate users for healthy food preparation~\cite{Wagner:2011:GSH:1961634.1961644}. The system tracks the user’s cooking activities with sensors in kitchen utensils and recommends healthy recipes that may increase the user’s cooking competence.
