--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,3 +1,95 @@
+@inproceedings{Karikome:2010:SSD:2108616.2108684,
+ author = {Karikome, Shihono and Fujii, Atsushi},
+ title = {A System for Supporting Dietary Habits: Planning Menus and Visualizing Nutritional Intake Balance},
+ booktitle = {Proceedings of the 4th International Conference on Uniquitous Information Management and Communication},
+ series = {ICUIMC '10},
+ year = {2010},
+ isbn = {978-1-60558-893-3},
+ location = {Suwon, Republic of Korea},
+ pages = {56:1--56:6},
+ articleno = {56},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2108616.2108684},
+ doi = {10.1145/2108616.2108684},
+ acmid = {2108684},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cooking recipes, dietary habits, information retrieval, nutritional intake balance, visualization},
+} 
+
+
+
+@INPROCEEDINGS{5358168,
+author={Mino, Y. and Kobayashi, I.},
+booktitle={Intelligent Computing and Intelligent Systems, 2009. ICIS 2009. IEEE International Conference on},
+title={Recipe recommendation for a diet considering a user's schedule and the balance of nourishment},
+year={2009},
+volume={3},
+pages={383-387},
+abstract={Today, there are a lot of Web sites and tools that introduce and propose cooking recipes for a diet. However, it is difficult to be on a diet by following those recipes because many of them do not consider user's circumstances. So, in this study, we propose a method to recommend cooking recipes for a diet considering user's schedule. Concretely, the evaluation value of either intake or consumption calorie is assigned to each event in the user's schedule, and then based on the calculation with the values, some candidates of recipes with calorie to make the user easily lost weight for the objective weight are selected considering the user's schedule during the period of a diet. In addition, to recommend more healthy recipes among the selected recipes, we use linear programming with the constraints of carbohydrate, lipid, protein, salt, and increasing the amount of vegetable intake.},
+keywords={Web sites;health care;linear programming;proteins;carbohydrate;cooking recipe recommendation;diet;linear programming;lipid;nourishment balance;protein;salt;user schedule;vegetable intake;Condition monitoring;Databases;Diseases;Encyclopedias;Linear programming;Lipidomics;Marine animals;Mobile handsets;Proteins;Uniform resource locators},
+doi={10.1109/ICICISYS.2009.5358168},}
+
+@inproceedings{Wagner:2011:GSH:1961634.1961644,
+ author = {Wagner, Juergen and Geleijnse, Gijs and van Halteren, Aart},
+ title = {Guidance and Support for Healthy Food Preparation in an Augmented Kitchen},
+ booktitle = {Proceedings of the 2011 Workshop on Context-awareness in Retrieval and Recommendation},
+ series = {CaRR '11},
+ year = {2011},
+ isbn = {978-1-4503-0625-6},
+ location = {Palo Alto, California},
+ pages = {47--50},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1961634.1961644},
+ doi = {10.1145/1961634.1961644},
+ acmid = {1961644},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {accelerometers, context awareness, recipes, recommender systems},
+} 
+
+
+
+@inproceedings{vanPinxteren:2011:DRS:1943403.1943422,
+ author = {van Pinxteren, Youri and Geleijnse, Gijs and Kamsteeg, Paul},
+ title = {Deriving a Recipe Similarity Measure for Recommending Healthful Meals},
+ booktitle = {Proceedings of the 16th International Conference on Intelligent User Interfaces},
+ series = {IUI '11},
+ year = {2011},
+ isbn = {978-1-4503-0419-1},
+ location = {Palo Alto, CA, USA},
+ pages = {105--114},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1943403.1943422},
+ doi = {10.1145/1943403.1943422},
+ acmid = {1943422},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {at-home trail, card-sorting, natural language processing, recipe similarity, user evaluation},
+} 
+
+
+
+@inproceedings{Shidochi:2009:FRM:1630995.1630998,
+ author = {Shidochi, Yuka and Takahashi, Tomokazu and Ide, Ichiro and Murase, Hiroshi},
+ title = {Finding Replaceable Materials in Cooking Recipe Texts Considering Characteristic Cooking Actions},
+ booktitle = {Proceedings of the ACM Multimedia 2009 Workshop on Multimedia for Cooking and Eating Activities},
+ series = {CEA '09},
+ year = {2009},
+ isbn = {978-1-60558-763-9},
+ location = {Beijing, China},
+ pages = {9--14},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1630995.1630998},
+ doi = {10.1145/1630995.1630998},
+ acmid = {1630998},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cooking recipe, recipe retrieval, text mining},
+} 
+
+[download] 
+
 @inproceedings{Teng:2012:RRU:2380718.2380757,
  author = {Teng, Chun-Yuen and Lin, Yu-Ru and Adamic, Lada A.},
  title = {Recipe Recommendation Using Ingredient Networks},
