--- a/bachelor_thesis.tex
+++ b/bachelor_thesis.tex
@@ -74,10 +74,9 @@ morecomment=[s][\color{javadocblue}]{/**}{*/}
 %\vspace{30mm}
 \vspace{30mm}
 
-{\Large\bf A TF-IDF Based Algorithm for  }\\ 
+{\Large\bf A Regional Food's Features Extraction Algorithm}\\ 
 %HUSTLE: Deploying A Secure Wireless Sensor Network 
 %by Light Communication with Smartphone\vspace{5mm}
-{\Large\bf Regional Food's Features Extraction }\\
 {\Large\bf and Its Application}\\
 \vspace{3mm}
 %\vspace{3mm}
