--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -4,7 +4,7 @@
 {\bf Abstract of Bachelor's Thesis} \\
 
 \vspace{5mm}
-{\bf A TF-IDF Based Algorithm for \\Regional Food's Features Extraction\\ and Its Application}
+{\bf A Regional Food's Features Extraction Algorithm\\ and Its Application}
 
 \end{Large}
 \end{center}
