--- a/contents/application.tex
+++ b/contents/application.tex
@@ -163,4 +163,35 @@ Fig.~\ref{fig:ingredient} shows the real data for ingredients in Japan's recipes
 
 The $TF$, $IA$, $MA$ and $IF$ value of ingredient are shown in Fig.~\ref{fig:ingredient}. We only use the $FI$ value for evaluating the featured ingredient but we also store the $TF$, $IA$, $MA$ value because they are necessary to recalculate the new meta data as we discussed in chapter 6, the Meta data recalculation section.
 
-  
+
+
+\section{Web Interfaces}
+
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{your_ingredient.eps}
+\caption{Page shows your home-available ingredients.}
+\label{fig:your_ingredient}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{register_recipe.eps}
+\caption{Registering new recipe page.}
+\label{fig:register_recipe}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{your_recipe.eps}
+\caption{Page shows your own recipes.}
+\label{fig:your_recipe}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{choose_target.eps}
+\caption{Choose the target region page.}
+\label{fig:choose_target}
+\end{figure}  
