--- a/contents/intro.tex
+++ b/contents/intro.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}\label{chap:intro}
 %section 1
 
-We can observe that in geographical regions that are far apart from each other often have different features and tastes. For example, the Kanto region, which is located in the East of Japan, often has dense taste in its foods, while the foods in Kansai region, which lies in the southern-central region of Japan's main island Honshu, often has a diluted taste. The reason is because each region has its own special materials for foods and people in these regions have different habits in cooking food.
+We can observe that geographical regions that are far apart from each other often have different features and tastes. For example, the Kanto region, which is located in the East of Japan, often has dense taste in its foods, while the foods in Kansai region, which lies in the southern-central region of Japan's main island Honshu, often has a diluted taste. The reason is because each region has its own special materials for foods and people in these regions have different habits in cooking food.
 
 In this thesis, we present a food analysis system to discover the taste of food and understand the featured ingredients in a specific geographical region.
 
